[refactor/DB-214]: 리뷰 별점 Enum 수정, 산책로 좋아요 수정 (#65)
* refactor(DB-215): infrastructure Rating 수정
* refactor(DB-216): core-domain Rating 수정
* refactor: getWalkwayRating 수정
* refactor(DB-217): api Rating 수정
* feature(DB-218): 별점 검증 어노테이션 추가
* refactor: 산책로 mapper 삭제
* feature(DB-219): 리뷰 작성 가능한 산책로 이용 기록 페이징 추가
* feature(DB-220): 산책로 좋아요 권한 수정
* fix: 산책기록 리뷰 가능 여부 수정
* refactor: 소나 수정
* refactor: 소나 수정
* 서브모듈 업데이트